--- a/public/index.html
+++ b/public/index.html
@@ -114,16 +114,16 @@
               <form action="">
                 <div class="flex md:justify-end w-full justify-center">
                   <input
-                  type="text"
-                  class="rounded-l w-9/12 lg:w-4/6 px-4 py-3 outline-none text-black"
-                  placeholder="Enter Email"
-                />
-                <button
-                  type="submit"
-                  class="outline-none bg-dark px-4 rounded-r hover:bg-opacity-90"
-                >
-                  Submit
-                </button>
+                    type="text"
+                    class="rounded-l w-9/12 lg:w-4/6 px-4 py-3 outline-none text-black"
+                    placeholder="Enter Email"
+                  />
+                  <button
+                    type="submit"
+                    class="outline-none bg-dark px-4 rounded-r hover:bg-opacity-90"
+                  >
+                    Submit
+                  </button>
                 </div>
               </form>
             </div>
@@ -366,7 +366,9 @@
       <section id="instructors" class="py-14 bg-blue">
         <div class="container">
           <div class="mb-8 text-white text-center">
-            <h2 class="font-semibold text-xl md:text-2xl mb-1">Our Instructors</h2>
+            <h2 class="font-semibold text-xl md:text-2xl mb-1">
+              Our Instructors
+            </h2>
             <p>
               Our instructors all have 5+ years working as a web developer in
               the industry
@@ -385,10 +387,18 @@
                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam
               </p>
               <div class="space-x-2">
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
               </div>
             </div>
             <div class="text-center p-4 bg-white rounded">
@@ -403,10 +413,18 @@
                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam
               </p>
               <div class="space-x-2">
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
               </div>
             </div>
             <div class="text-center p-4 bg-white rounded">
@@ -421,10 +439,18 @@
                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam
               </p>
               <div class="space-x-2">
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
               </div>
             </div>
             <div class="text-center p-4 bg-white rounded">
@@ -439,10 +465,18 @@
                 Assumenda accusamus nobis sed cupiditate iusto? Quibusdam
               </p>
               <div class="space-x-2">
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="hover:text-blue"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+                <a href="#" class="hover:text-blue"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -450,81 +484,124 @@
       </section>
       <!-- Contact Info -->
       <section class="py-14">
-           <div class="container">
-              <div class="grid md:grid-cols-2 gap-6">
-                <div class="md:pr-20">
-                  <h3 class="font-semibold text-xl  md:text-2xl mb-3">Contact Info</h3>
-                  <ul>
-                    <li class="border-b border-b-gray py-2">
-                      <span class="font-semibold">Main Location:</span>
-                      <span>50 Main st Boston MA</span>
-                    </li>
-                    <li class="border-b border-b-gray py-2">
-                      <span class="font-semibold">Enrollment Phone:</span>
-                      <span>(555) 555-5555</span>
-                    </li>
-                    <li class="border-b border-b-gray py-2">
-                      <span class="font-semibold">Student Phone:</span>
-                      <span>(333) 333-3333</span>
-                    </li>
-                    <li class="border-b border-b-gray py-2">
-                      <span class="font-semibold">Enrollment Email:</span>
-                      <span>(555) enroll@frontendbc.test</span>
-                    </li>
-                    <li class="py-2">
-                      <span class="font-semibold">Student Email:</span>
-                      <span>student@frontendbc.test</span>
-                    </li>
-                  </ul>
-                </div>
-                <div>
-                  <iframe class="w-full h-full" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.558970894074!2d-71.06448938516724!3d42.37323744226299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370ed678c5c7b%3A0x1151236a3eb3c8e2!2s50%20Main%20St%2C%20Charlestown%2C%20MA%2002129%2C%20USA!5e0!3m2!1sen!2sde!4v1655292663245!5m2!1sen!2sde"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-              </div>
-           </div>
+        <div class="container">
+          <div class="grid md:grid-cols-2 gap-6">
+            <div class="md:pr-20">
+              <h3 class="font-semibold text-xl md:text-2xl mb-3">
+                Contact Info
+              </h3>
+              <ul>
+                <li class="border-b border-b-gray py-2">
+                  <span class="font-semibold">Main Location:</span>
+                  <span>50 Main st Boston MA</span>
+                </li>
+                <li class="border-b border-b-gray py-2">
+                  <span class="font-semibold">Enrollment Phone:</span>
+                  <span>(555) 555-5555</span>
+                </li>
+                <li class="border-b border-b-gray py-2">
+                  <span class="font-semibold">Student Phone:</span>
+                  <span>(333) 333-3333</span>
+                </li>
+                <li class="border-b border-b-gray py-2">
+                  <span class="font-semibold">Enrollment Email:</span>
+                  <span>(555) enroll@frontendbc.test</span>
+                </li>
+                <li class="py-2">
+                  <span class="font-semibold">Student Email:</span>
+                  <span>student@frontendbc.test</span>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <iframe
+                class="w-full h-full"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.558970894074!2d-71.06448938516724!3d42.37323744226299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370ed678c5c7b%3A0x1151236a3eb3c8e2!2s50%20Main%20St%2C%20Charlestown%2C%20MA%2002129%2C%20USA!5e0!3m2!1sen!2sde!4v1655292663245!5m2!1sen!2sde"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-10 bg-dark relative">
       <div class="container">
+        <a
+          href="#"
+          class="absolute right-10 top-8 text-center bg-blue text-white text-xl w-10 h-10 leading-10 rounded-full hover:bg-opacity-80"
+          ><i class="fa-solid fa-arrow-up"></i
+        ></a>
         <div class="text-center text-white text-sm">
-          <p>Developed by <span class="text-yellow">Eslam Saadat (Iman)</span></p>
+          <p>
+            Developed by <span class="text-yellow">Eslam Saadat (Iman)</span>
+          </p>
         </div>
       </div>
     </footer>
     <!-- Modal  -->
-      <div id="modal" class="bg-[rgba(0,0,0,.8)] rounded fixed w-full h-full top-0 left-0 overflow-x-hidden hidden items-center justify-center z-20">
-        <div id="modal_content" class="bg-white">
-          <div class="p-4 flex justify-between items-center border-b border-[#e1e1e1]">
-              <h5 class="font-normal">Enrollment</h5>
-              <i id="close_btn" class="fa-solid fa-times text-2xl cursor-pointer hover:text-blue"></i>
-          </div>
-          <div class="p-4">
-            <p class="mb-5">Fill out this form and we will get back to you</p>
-            <form>
-              <div class="flex flex-col mb-4">
-                <label for="first-name" class="mb-1">First Name:</label>
-                <input type="text" id="first-name" class="border border-dark rounded outline-none py-1 px-2">
-              </div>
-              <div class="flex flex-col mb-4">
-                <label for="last-name" class="mb-1">Last Name:</label>
-                <input type="text" id="last-name" class="border border-dark rounded outline-none py-1 px-2">
-              </div>
-              <div class="flex flex-col mb-4">
-                <label for="email" class="mb-1">Email:</label>
-                <input type="email" id="email" class="border border-dark rounded outline-none py-1 px-2">
-              </div>
-              <div class="flex flex-col mb-5">
-                <label for="phone" class="mb-1">Phone:</label>
-                <input type="tel" id="phone" class="border border-dark rounded outline-none py-1 px-2">
-              </div>
-              <div>
-                <input type="submit" class="inline-block rounded bg-blue text-white py-2 px-4 hover:bg-opacity-90 cursor-pointer">
-              </div>
-            </form>
-          </div>
+    <div
+      id="modal"
+      class="bg-[rgba(0,0,0,.8)] rounded fixed w-full h-full top-0 left-0 overflow-x-hidden hidden items-center justify-center z-20"
+    >
+      <div id="modal_content" class="bg-white">
+        <div
+          class="p-4 flex justify-between items-center border-b border-[#e1e1e1]"
+        >
+          <h5 class="font-normal">Enrollment</h5>
+          <i
+            id="close_btn"
+            class="fa-solid fa-times text-2xl cursor-pointer hover:text-blue"
+          ></i>
+        </div>
+        <div class="p-4">
+          <p class="mb-5">Fill out this form and we will get back to you</p>
+          <form>
+            <div class="flex flex-col mb-4">
+              <label for="first-name" class="mb-1">First Name:</label>
+              <input
+                type="text"
+                id="first-name"
+                class="border border-dark rounded outline-none py-1 px-2"
+              />
+            </div>
+            <div class="flex flex-col mb-4">
+              <label for="last-name" class="mb-1">Last Name:</label>
+              <input
+                type="text"
+                id="last-name"
+                class="border border-dark rounded outline-none py-1 px-2"
+              />
+            </div>
+            <div class="flex flex-col mb-4">
+              <label for="email" class="mb-1">Email:</label>
+              <input
+                type="email"
+                id="email"
+                class="border border-dark rounded outline-none py-1 px-2"
+              />
+            </div>
+            <div class="flex flex-col mb-5">
+              <label for="phone" class="mb-1">Phone:</label>
+              <input
+                type="tel"
+                id="phone"
+                class="border border-dark rounded outline-none py-1 px-2"
+              />
+            </div>
+            <div>
+              <input
+                type="submit"
+                class="inline-block rounded bg-blue text-white py-2 px-4 hover:bg-opacity-90 cursor-pointer"
+              />
+            </div>
+          </form>
         </div>
       </div>
+    </div>
     <script src="../js/scripr.js"></script>
   </body>
 </html>
