--- a/public/index.html
+++ b/public/index.html
@@ -545,7 +545,7 @@
     <!-- Modal  -->
     <div
       id="modal"
-      class="bg-[rgba(0,0,0,.8)] rounded fixed w-full h-full top-0 left-0 overflow-x-hidden hidden items-center justify-center z-20"
+      class="bg-[rgba(0,0,0,.8)] rounded fixed w-full h-full top-0 left-0 overflow-x-hidden hidden items-center justify-center z-20 px-4"
     >
       <div id="modal_content" class="bg-white">
         <div
